<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:id="@+id/rl">
    <TextView
        android:id="@+id/change_city_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/input_city"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">
    </TextView>

    <Button
        android:id="@+id/btnInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input"
        android:layout_gravity="bottom"
        android:layout_marginTop="71dp"
        android:layout_below="@+id/change_city_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </Button>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_gravity="bottom"
        android:layout_alignTop="@+id/btnInput"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
    </Button>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:id="@+id/inputTextField"
        android:layout_toLeftOf="@+id/btnCancel"
        android:layout_toRightOf="@+id/btnInput"
        android:layout_toEndOf="@+id/btnInput"
        android:layout_above="@+id/btnCancel"
        android:contextClickable="true"
        android:editable="true"
        android:layout_below="@+id/change_city_text" />

</RelativeLayout>
